--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,173 +1,3 @@
-body,
-html {
-  margin: 0px;
-  top: 0%;
-  color: rgb(255, 255, 255);
-}
-.style-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 15px;
-  /* background-color: blueviolet; */
-}
-
-.candidate {
-  width: 100%;
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 15px;
-  text-align: center;
-}
-
-.go-team {
-  display: block;
-  position: relative;
-  top: 60px;
-}
-
-.go-about {
-  display: flex;
-  height: min-content;
-  position: relative;
-  top: 60px;
-}
-
-.container-texto {
-  width: 100%;
-  height: 2.813rem;
-  font: 24px "Rubik", sans-serif;
-  line-height: 1.88;
-  text-align: center;
-  color: rgb(20, 217, 196);
-}
-
-.container-equipo {
-  width: 100%;
-  font-family: "OpenSans", sans-serif;
-  line-height: 1.5;
-  text-align: center;
-  color: #54585a;
-}
-
-.square {
-  width: 30px;
-  height: 30px;
-  border: hidden;
-  margin: initial;
-  background-color: rgb(255, 255, 255);
-  top: 0%;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-
-.section-2 {
-  padding: 20px;
-  position: relative;
-  background-color: rgba(184, 184, 185, 0.8);
-  display: flex;
-  flex-direction: column;
-}
-
-.section-2-title {
-  width: 100%;
-  margin: 5px;
-  box-sizing: border-box;
-  font: 22px "Rubik", "sans-serif";
-  line-height: 2.05;
-  text-align: center;
-  color: #099d8d;
-}
-
-.section-2-text {
-  width: 100%;
-  box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
-  line-height: 1.5;
-  text-align: center;
-  color: #54585a;
-  overflow: hidden;
-}
-
-/*main
-.container-principal {
-  margin-top: 60px;
-  width: 100%;
-  height: 200px;
-  background-color: #ffffff;
-}*/
-
-/* CAMBIAR CSS DESDE AQUÍ*/
-
-i {
-  color: #099d8d;
-}
-
-.mark {
-  margin: 0;
-  width: 100%;
-  color: rgb(184, 184, 185);
-}
-
-.footer {
-  width: 100%;
-  margin-top: 50px;
-  margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.copyright-footer {
-  margin-top: 1.875rem;
-  margin-bottom: 0;
-  color: #b8b8b9;
-  font-size: 0.875rem;
-  text-align: center;
-}
-
-.nav-footer {
-  width: 100%;
-  text-align: center;
-  padding-left: 0px;
-}
-
-.list-footer {
-  margin: 0px;
-  list-style: none;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  text-decoration: none;
-}
-
-ul {
-  padding: 0px;
-}
-
-.image-footer {
-  display: flex;
-  width: 115.9px;
-  height: 45px;
-  text-align: center;
-}
-
-.image-footer img {
-  width: 100%;
-  height: 100%;
-  margin-bottom: 45px;
-}
-
-.links-footer {
-  text-decoration: none;
-  color: #54585a;
-  font-size: 0.875rem;
-  font-family: "Open Sans", sans-serif;
-}
-
+@import "core/_reset";
 @import "core/_header";
 @import "core/_go-about";
