--- a/_src/assets/scss/core/_go-about.scss
+++ b/_src/assets/scss/core/_go-about.scss
@@ -65,6 +65,9 @@
     border-radius: 4px;
     border: solid 5px rgba(0, 0, 0, 0.08);
   }
+  i {
+    color: #099d8d;
+  }
 }
 
 /* MEDIAQUERY ADALABERS*/
