--- a/_src/assets/scss/core/_header.scss
+++ b/_src/assets/scss/core/_header.scss
@@ -16,7 +16,10 @@ header {
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: rgb(255, 255, 255);
+  a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+  }
 }
 
 .nav-menu {
