--- a/_src/templates/partials/_go-about.html
+++ b/_src/templates/partials/_go-about.html
@@ -212,7 +212,7 @@
 						</li>
 					&bull;
 					<li>
-						<a href="#">
+						<a href="mailto:ayalopezr@gmail.com">
 							<i class="fas fa-envelope"></i>
 						</a>
 						</li>
