--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -10,7 +10,7 @@
   text-align: center;
 }
 /* CONTACTO */
-.contact {
+.form-contact {
   width: 7.938rem;
   height: 2.813rem;
   margin: 1.875rem auto;
@@ -25,7 +25,7 @@
   color: $primary-color;
 }
 /* Parrafo y small */
-.container-p {
+.form-container-text {
   width: 18.125rem;
   height: 9rem;
   margin: 0.938rem auto;
@@ -42,12 +42,17 @@ small {
   font-size: 12px;
 }
 /* Asterisco */
-.text-style-1 {
+.form-text-style-1 {
   font-size: 12px;
   color: $third-color;
 }
+.container-form {
+  display: inline-block;
+  height: 30.625rem;
+  margin-top: 5.25rem;
+}
 /* Contenedor formulario */
-.container-formul {
+.container-form {
   display: inline-block;
   height: 30.625rem;
   margin-top: 5.25rem;
@@ -105,7 +110,7 @@ small {
   color: $button-text-color;
   background-color: $primary-color;
 }
-.Button-green {
+.form-button {
   text-align: center;
 }
 
@@ -118,79 +123,51 @@ small {
       height: 50.625rem;
       text-align: center;
     }
+    &-form {
+      display: inline-block;
+      height: 30.625rem;
+      margin-top: 5.25rem;
+    }
   }
 
-  .container-p {
-    width: 27.625rem;
-    height: 7.5rem;
-    font-size: 1rem;
-  }
-
-  .text-style-1 {
-    font-size: 12px;
-    color: $third-color;
+  .form {
+    &-text {
+      width: 27.625rem;
+      height: 7.5rem;
+      font-size: 1rem;
+    }
+    &-text-style-1 {
+      font-size: 12px;
+      color: $third-color;
+    }
   }
   /* Contenedor formulario */
-  .container-formul {
-    display: inline-block;
-    height: 30.625rem;
-    margin-top: 5.25rem;
-  }
   .label {
     width: 8.188rem;
-    height: 1.188rem;
-    text-align: left;
-    margin-top: 0.813rem;
-    margin-bottom: 0.438rem;
-    font-family: $secondary-font;
-    font-size: 14px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: $second-color;
   }
+
   /* Nombre completo */
   #firstName {
     width: 27.625rem;
     height: 2.813rem;
-    border: solid 1px $border-color;
   }
-  /* Email y teléfono */
-  .second-part {
-    display: block;
-    text-align: center;
-  }
+
   #Email {
     width: 27.625rem;
-    height: 2.813rem;
-    border: solid 1px $border-color;
   }
-  .Telephone {
-    padding-left: 0;
-  }
+
   #Tel {
     width: 27.625rem;
-    height: 2.813rem;
-    border: solid 1px $border-color;
   }
   /* Mensaje */
   #Message {
     width: 27.625rem;
-    height: 6.563rem;
-    border: solid 1px $border-color;
   }
   /* Botón */
   #Button {
     width: 12.875rem;
-    height: 2.813rem;
-    margin-top: 1.875rem;
-    border-radius: 4px;
-    color: $button-text-color;
-    background-color: $primary-color;
   }
-  .Button-green {
+  .form-button {
     text-align: right;
   }
 }
@@ -202,104 +179,35 @@ small {
     height: 47.063rem;
     text-align: center;
   }
-  /* CONTACTO */
-  .contact {
-    width: 7.938rem;
-    height: 2.813rem;
-    margin: 1.875rem auto;
-    font-family: $primary-font;
-    font-size: 1.5rem;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    text-align: center;
-    line-height: 1.88;
-    letter-spacing: normal;
-    color: $primary-color;
-  }
-  /* Parrafo y small */
-  .container-p {
+
+  .form-container-text {
     width: 37.563rem;
-    height: 6rem;
-    margin: 0.938rem auto;
-    font-family: $secondary-font;
-    font-size: 1rem;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    color: $second-color;
   }
-  small {
-    font-size: 12px;
-  }
-  /* Asterisco */
-  .text-style-1 {
-    font-size: 12px;
-    color: $third-color;
-  }
-  /* Contenedor formulario */
-  .container-formul {
-    display: inline-block;
-    height: 30.625rem;
-    margin-top: 5.25rem;
-  }
+
   .label {
     width: 8.188rem;
-    height: 1.188rem;
-    text-align: left;
-    margin-top: 0.813rem;
-    margin-bottom: 0.438rem;
-    font-family: $secondary-font;
-    font-size: 14px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: $second-color;
   }
-  /* Nombre completo */
+
   #firstName {
     width: 37.563rem;
     height: 2.813rem;
     border: solid 1px $border-color;
   }
-  /* Email y teléfono */
+
   .second-part {
     display: flex;
-    text-align: center;
   }
   #Email {
     width: 24.688rem;
-    height: 2.813rem;
-    border: solid 1px $border-color;
   }
   .Telephone {
     padding-left: 2.75rem;
   }
   #Tel {
     width: 10.125rem;
-    height: 2.813rem;
-    border: solid 1px $border-color;
   }
-  /* Mensaje */
+
   #Message {
     width: 37.563rem;
-    height: 6.563rem;
-    border: solid 1px $border-color;
-  }
-  /* Botón */
-  #Button {
-    width: 17.375rem;
-    height: 2.813rem;
-    margin-top: 1.875rem;
-    border-radius: 4px;
-    color: $button-text-color;
-    background-color: $primary-color;
-  }
-  .Button-green {
-    text-align: right;
   }
 }
