--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -10,7 +10,7 @@
   text-align: center;
 }
 /* CONTACTO */
-.form-contact {
+.contact {
   width: 7.938rem;
   height: 2.813rem;
   margin: 1.875rem auto;
@@ -25,17 +25,12 @@
   color: $primary-color;
 }
 /* Parrafo y small */
-.form-container-text {
+.container-p {
   width: 18.125rem;
   height: 9rem;
   margin: 0.938rem auto;
-<<<<<<< HEAD
   font-family: $second-font;
   font-size: 1rem;
-=======
-  font-family: $secondary-font;
-  font-size: 16px;
->>>>>>> e0ed6a734baa9d7f8ca8bb527614bcf7b2c6ca0d
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
@@ -47,22 +42,12 @@ small {
   font-size: 12px;
 }
 /* Asterisco */
-<<<<<<< HEAD
 .text-style-1 {
   font-size: 0.75rem;
-=======
-.form-text-style-1 {
-  font-size: 12px;
->>>>>>> e0ed6a734baa9d7f8ca8bb527614bcf7b2c6ca0d
   color: $third-color;
 }
-.container-form {
-  display: inline-block;
-  height: 30.625rem;
-  margin-top: 5.25rem;
-}
 /* Contenedor formulario */
-.container-form {
+.container-formul {
   display: inline-block;
   height: 30.625rem;
   margin-top: 5.25rem;
@@ -72,13 +57,8 @@ small {
   height: 1.188rem;
   margin-top: 0.813rem;
   margin-bottom: 0.438rem;
-<<<<<<< HEAD
   font-family: $second-font;
   font-size: 0.875rem;
-=======
-  font-family: $secondary-font;
-  font-size: 14px;
->>>>>>> e0ed6a734baa9d7f8ca8bb527614bcf7b2c6ca0d
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
@@ -125,13 +105,12 @@ small {
   color: $button-text-color;
   background-color: $primary-color;
 }
-.form-button {
+.Button-green {
   text-align: center;
 }
 
 /* Versión tablet */
 @media all and (min-width: 768px) and (max-width: 1200px) {
-<<<<<<< HEAD
   /* Parrafo y small */
   .container-p {
     width: 27.625rem;
@@ -140,51 +119,14 @@ small {
   .label {
     width: 8.188rem;
     height: 1.188rem;
-=======
-  /* Inicio Main */
-  .container {
-    &-main {
-      width: 100%;
-      height: 50.625rem;
-      text-align: center;
-    }
-    &-form {
-      display: inline-block;
-      height: 30.625rem;
-      margin-top: 5.25rem;
-    }
   }
-
-  .form {
-    &-text {
-      width: 27.625rem;
-      height: 7.5rem;
-      font-size: 1rem;
-    }
-    &-text-style-1 {
-      font-size: 12px;
-      color: $third-color;
-    }
-  }
-  /* Contenedor formulario */
-  .label {
-    width: 8.188rem;
->>>>>>> e0ed6a734baa9d7f8ca8bb527614bcf7b2c6ca0d
-  }
-
   /* Nombre completo */
   #firstName {
     width: 27.625rem;
-<<<<<<< HEAD
-=======
-    height: 2.813rem;
->>>>>>> e0ed6a734baa9d7f8ca8bb527614bcf7b2c6ca0d
   }
-
   #Email {
     width: 27.625rem;
   }
-
   #Tel {
     width: 27.625rem;
   }
@@ -195,12 +137,6 @@ small {
   /* Botón */
   #Button {
     width: 12.875rem;
-<<<<<<< HEAD
-=======
-  }
-  .form-button {
-    text-align: right;
->>>>>>> e0ed6a734baa9d7f8ca8bb527614bcf7b2c6ca0d
   }
 }
 
@@ -208,33 +144,21 @@ small {
   /* Inicio Main */
   .container-main {
     height: 47.063rem;
-<<<<<<< HEAD
   }
   /* Parrafo y small */
   .container-p {
     width: 37.563rem;
     height: 6rem;
-=======
-    text-align: center;
   }
-
-  .form-container-text {
-    width: 37.563rem;
->>>>>>> e0ed6a734baa9d7f8ca8bb527614bcf7b2c6ca0d
-  }
-
   .label {
     width: 8.188rem;
-<<<<<<< HEAD
     height: 1.188rem;
-=======
->>>>>>> e0ed6a734baa9d7f8ca8bb527614bcf7b2c6ca0d
   }
-
+  /* Nombre completo */
   #firstName {
     width: 37.563rem;
   }
-
+  /* Email y teléfono */
   .second-part {
     display: flex;
   }
@@ -247,14 +171,11 @@ small {
   #Tel {
     width: 10.125rem;
   }
-
+  /* Mensaje */
   #Message {
     width: 37.563rem;
-<<<<<<< HEAD
   }
   .Button-green {
     text-align: right;
-=======
->>>>>>> e0ed6a734baa9d7f8ca8bb527614bcf7b2c6ca0d
   }
 }
