--- a/_src/assets/scss/core/_form.scss
+++ b/_src/assets/scss/core/_form.scss
@@ -29,14 +29,14 @@
   width: 18.125rem;
   height: 9rem;
   margin: 0.938rem auto;
-  font-family: $second-font;
+  font-family: $secondary-font;
   font-size: 1rem;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: 1.5;
   letter-spacing: normal;
-  color: $second-color;
+  color: $secondary-font;
 }
 small {
   font-size: 12px;
@@ -57,14 +57,14 @@ small {
   height: 1.188rem;
   margin-top: 0.813rem;
   margin-bottom: 0.438rem;
-  font-family: $second-font;
+  font-family: $secondary-font;
   font-size: 0.875rem;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
-  color: $second-color;
+  color: $secondary-font;
 }
 /* Nombre completo */
 #firstName {
